// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Component of SETMENU component renders correctly 1`] = `
<div
  className="order-wrapper order-container"
>
  <div
    className="modal-order modal"
  >
    <button
      className="remove-modal"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "red",
          "display": "block",
          "float": "right",
        }
      }
    >
      ×
    </button>
    <div
      className="modal-order-content"
      style={
        Object {
          "margin": "1rem 1rem 1rem 1rem",
        }
      }
    >
      <p
        className="justify l-r-pad-text"
      >
         Add 
         to todays menu
      </p>
    </div>
    <div
      className="modal-order-content"
    >
      <button
        className="remove-modal"
        id="addMenu"
        onClick={[Function]}
      >
        Add
      </button>
      <button
        className="remove-modal"
        id="removeMenu"
        onClick={[Function]}
      >
        Cancel
      </button>
    </div>
  </div>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Set menu from the meal options
  </h4>
  <table>
    <tbody>
      <tr>
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Add to Menu
        </th>
      </tr>
      <tr
        className="tr"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="rice"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
      <tr
        className="tr"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="beans"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="pagination"
  >
    <div
      className="prev p-color"
    >
         
      <button
        onClick={[Function]}
      >
         
        <em
          className="fa fa-angle-left"
        />
         PREV 
      </button>
    </div>
    <div
      className="current p-color"
    >
      <button>
        1
         
      </button>
    </div>
    <div
      className="next p-color"
    >
      <button
        onClick={[Function]}
      >
        NEXT 
        <em
          className="fa fa-angle-right"
        />
      </button>
        
       
    </div>
  </div>
</div>
`;

exports[`Test Component of SETMENU component should call addMenu method onclick event 1`] = `
<div
  className="order-wrapper order-container"
>
  <div
    className="modal-order modal"
  >
    <button
      className="remove-modal"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "red",
          "display": "block",
          "float": "right",
        }
      }
    >
      ×
    </button>
    <div
      className="modal-order-content"
      style={
        Object {
          "margin": "1rem 1rem 1rem 1rem",
        }
      }
    >
      <p
        className="justify l-r-pad-text"
      >
         Add 
         to todays menu
      </p>
    </div>
    <div
      className="modal-order-content"
    >
      <button
        className="remove-modal"
        id="addMenu"
        onClick={[Function]}
      >
        Add
      </button>
      <button
        className="remove-modal"
        id="removeMenu"
        onClick={[Function]}
      >
        Cancel
      </button>
    </div>
  </div>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      >
        Title is required
      </span>
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Set menu from the meal options
  </h4>
  <table>
    <tbody>
      <tr>
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Add to Menu
        </th>
      </tr>
      <tr
        className="tr"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="rice"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
      <tr
        className="tr"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="beans"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="pagination"
  >
    <div
      className="prev p-color"
    >
         
      <button
        onClick={[Function]}
      >
         
        <em
          className="fa fa-angle-left"
        />
         PREV 
      </button>
    </div>
    <div
      className="current p-color"
    >
      <button>
        1
         
      </button>
    </div>
    <div
      className="next p-color"
    >
      <button
        onClick={[Function]}
      >
        NEXT 
        <em
          className="fa fa-angle-right"
        />
      </button>
        
       
    </div>
  </div>
</div>
`;

exports[`Test Component of SETMENU component should cancel addMenu modal cancelAdd method onclick event 1`] = `
<div
  className="order-wrapper order-container"
>
  <div
    className="modal-order modal"
  >
    <button
      className="remove-modal"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "red",
          "display": "block",
          "float": "right",
        }
      }
    >
      ×
    </button>
    <div
      className="modal-order-content"
      style={
        Object {
          "margin": "1rem 1rem 1rem 1rem",
        }
      }
    >
      <p
        className="justify l-r-pad-text"
      >
         Add 
         to todays menu
      </p>
    </div>
    <div
      className="modal-order-content"
    >
      <button
        className="remove-modal"
        id="addMenu"
        onClick={[Function]}
      >
        Add
      </button>
      <button
        className="remove-modal"
        id="removeMenu"
        onClick={[Function]}
      >
        Cancel
      </button>
    </div>
  </div>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      >
        Title is required
      </span>
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Set menu from the meal options
  </h4>
  <table>
    <tbody>
      <tr>
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Add to Menu
        </th>
      </tr>
      <tr
        className="tr"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="rice"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
      <tr
        className="tr"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="beans"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="pagination"
  >
    <div
      className="prev p-color"
    >
         
      <button
        onClick={[Function]}
      >
         
        <em
          className="fa fa-angle-left"
        />
         PREV 
      </button>
    </div>
    <div
      className="current p-color"
    >
      <button>
        1
         
      </button>
    </div>
    <div
      className="next p-color"
    >
      <button
        onClick={[Function]}
      >
        NEXT 
        <em
          className="fa fa-angle-right"
        />
      </button>
        
       
    </div>
  </div>
</div>
`;

exports[`Test Component of SETMENU component should respond to a click event by dispalying a modal when caterer want to set menu by selecting a meal 1`] = `
<div
  className="order-wrapper order-container"
>
  <div
    className="modal-order modal"
  >
    <button
      className="remove-modal"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "red",
          "display": "block",
          "float": "right",
        }
      }
    >
      ×
    </button>
    <div
      className="modal-order-content"
      style={
        Object {
          "margin": "1rem 1rem 1rem 1rem",
        }
      }
    >
      <p
        className="justify l-r-pad-text"
      >
         Add 
         to todays menu
      </p>
    </div>
    <div
      className="modal-order-content"
    >
      <button
        className="remove-modal"
        id="addMenu"
        onClick={[Function]}
      >
        Add
      </button>
      <button
        className="remove-modal"
        id="removeMenu"
        onClick={[Function]}
      >
        Cancel
      </button>
    </div>
  </div>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      >
        Title is required
      </span>
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Set menu from the meal options
  </h4>
  <table>
    <tbody>
      <tr>
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Add to Menu
        </th>
      </tr>
      <tr
        className="tr"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="rice"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
      <tr
        className="tr"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="beans"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="pagination"
  >
    <div
      className="prev p-color"
    >
         
      <button
        onClick={[Function]}
      >
         
        <em
          className="fa fa-angle-left"
        />
         PREV 
      </button>
    </div>
    <div
      className="current p-color"
    >
      <button>
        1
         
      </button>
    </div>
    <div
      className="next p-color"
    >
      <button
        onClick={[Function]}
      >
        NEXT 
        <em
          className="fa fa-angle-right"
        />
      </button>
        
       
    </div>
  </div>
</div>
`;

exports[`Test Component of SETMENU component should respond to change event and change the state of the title input and expire time and add meal to the menu 1`] = `
<div
  className="order-wrapper order-container"
>
  <div
    className="modal-order "
  >
    <button
      className="remove-modal"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "red",
          "display": "block",
          "float": "right",
        }
      }
    >
      ×
    </button>
    <div
      className="modal-order-content"
      style={
        Object {
          "margin": "1rem 1rem 1rem 1rem",
        }
      }
    >
      <p
        className="justify l-r-pad-text"
      >
         Add 
        rice
         to todays menu
      </p>
    </div>
    <div
      className="modal-order-content"
    >
      <button
        className="remove-modal"
        id="addMenu"
        onClick={[Function]}
      >
        Add
      </button>
      <button
        className="remove-modal"
        id="removeMenu"
        onClick={[Function]}
      >
        Cancel
      </button>
    </div>
  </div>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Set menu from the meal options
  </h4>
  <table>
    <tbody>
      <tr>
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Add to Menu
        </th>
      </tr>
      <tr
        className="tr"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="rice"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
      <tr
        className="tr"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="beans"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="pagination"
  >
    <div
      className="prev p-color"
    >
         
      <button
        onClick={[Function]}
      >
         
        <em
          className="fa fa-angle-left"
        />
         PREV 
      </button>
    </div>
    <div
      className="current p-color"
    >
      <button>
        1
         
      </button>
    </div>
    <div
      className="next p-color"
    >
      <button
        onClick={[Function]}
      >
        NEXT 
        <em
          className="fa fa-angle-right"
        />
      </button>
        
       
    </div>
  </div>
</div>
`;

exports[`Test Component of SETMENU component should respond to change event and change the state of the title input and return error while addMeal method when orderBefore field is not supplied 1`] = `
<div
  className="order-wrapper order-container"
>
  <div
    className="modal-order modal"
  >
    <button
      className="remove-modal"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "red",
          "display": "block",
          "float": "right",
        }
      }
    >
      ×
    </button>
    <div
      className="modal-order-content"
      style={
        Object {
          "margin": "1rem 1rem 1rem 1rem",
        }
      }
    >
      <p
        className="justify l-r-pad-text"
      >
         Add 
         to todays menu
      </p>
    </div>
    <div
      className="modal-order-content"
    >
      <button
        className="remove-modal"
        id="addMenu"
        onClick={[Function]}
      >
        Add
      </button>
      <button
        className="remove-modal"
        id="removeMenu"
        onClick={[Function]}
      >
        Cancel
      </button>
    </div>
  </div>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      >
        Order Expiring time is required
      </span>
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Set menu from the meal options
  </h4>
  <table>
    <tbody>
      <tr>
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Add to Menu
        </th>
      </tr>
      <tr
        className="tr"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="rice"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
      <tr
        className="tr"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="beans"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="pagination"
  >
    <div
      className="prev p-color"
    >
         
      <button
        onClick={[Function]}
      >
         
        <em
          className="fa fa-angle-left"
        />
         PREV 
      </button>
    </div>
    <div
      className="current p-color"
    >
      <button>
        1
         
      </button>
    </div>
    <div
      className="next p-color"
    >
      <button
        onClick={[Function]}
      >
        NEXT 
        <em
          className="fa fa-angle-right"
        />
      </button>
        
       
    </div>
  </div>
</div>
`;

exports[`Test Component of SETMENU component should respond to mapDispatchToProps methods 1`] = `
Object {
  "actions": Object {
    "changePassword": [Function],
    "clearMessages": [Function],
    "getNotifications": [Function],
    "getUser": [Function],
    "loadErrorMessage": [Function],
    "loadMostOrdered": [Function],
    "loadMostOrderedMeal": [Function],
    "loadNotifications": [Function],
    "loadSuccessMessage": [Function],
    "loadUser": [Function],
    "login": [Function],
    "refreshToken": [Function],
    "register": [Function],
    "resetLink": [Function],
    "updateProfile": [Function],
    "upgrade": [Function],
  },
  "mealActions": Object {
    "createMeal": [Function],
    "deleteMeal": [Function],
    "getAllMeals": [Function],
    "loadAllMeals": [Function],
    "loadErrorMessage": [Function],
    "loadMostOrdered": [Function],
    "loadMostOrderedMeal": [Function],
    "loadSuccessMessage": [Function],
    "updateMeal": [Function],
  },
  "menuActions": Object {
    "getMenu": [Function],
    "loadErrorMessage": [Function],
    "loadSuccessMessage": [Function],
    "loadTodayMenu": [Function],
    "setMenu": [Function],
  },
}
`;

exports[`Test Component of SETMENU component should respond to mapStateToProps methods 1`] = `
Object {
  "errorMessage": Object {
    "createMealError": "Wrong credentials",
  },
  "meals": Object {
    "rows": Array [
      Object {
        "descrption": "Very delicious",
        "id": 1,
        "name": "rice",
        "price": "200",
      },
      Object {
        "descrption": "Very delicious",
        "id": 2,
        "name": "beans",
        "price": "200",
      },
    ],
  },
  "successMessage": Object {
    "createMealSuccess": "meal created",
  },
}
`;

exports[`Test Component of SETMENU component should should respond to cancelAdd method that close modal 1`] = `
<div
  className="order-wrapper order-container"
>
  <div
    className="modal-order modal"
  >
    <button
      className="remove-modal"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "red",
          "display": "block",
          "float": "right",
        }
      }
    >
      ×
    </button>
    <div
      className="modal-order-content"
      style={
        Object {
          "margin": "1rem 1rem 1rem 1rem",
        }
      }
    >
      <p
        className="justify l-r-pad-text"
      >
         Add 
         to todays menu
      </p>
    </div>
    <div
      className="modal-order-content"
    >
      <button
        className="remove-modal"
        id="addMenu"
        onClick={[Function]}
      >
        Add
      </button>
      <button
        className="remove-modal"
        id="removeMenu"
        onClick={[Function]}
      >
        Cancel
      </button>
    </div>
  </div>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Set menu from the meal options
  </h4>
  <table>
    <tbody>
      <tr>
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Add to Menu
        </th>
      </tr>
      <tr
        className="tr"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="rice"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
      <tr
        className="tr"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="beans"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="pagination"
  >
    <div
      className="prev p-color"
    >
         
      <button
        onClick={[Function]}
      >
         
        <em
          className="fa fa-angle-left"
        />
         PREV 
      </button>
    </div>
    <div
      className="current p-color"
    >
      <button>
        1
         
      </button>
    </div>
    <div
      className="next p-color"
    >
      <button
        onClick={[Function]}
      >
        NEXT 
        <em
          className="fa fa-angle-right"
        />
      </button>
        
       
    </div>
  </div>
</div>
`;

exports[`Test Component of SETMENU component should should respond to lifeCycle Methods 1`] = `
<div
  className="order-wrapper order-container"
>
  <div
    className="modal-order modal"
  >
    <button
      className="remove-modal"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "red",
          "display": "block",
          "float": "right",
        }
      }
    >
      ×
    </button>
    <div
      className="modal-order-content"
      style={
        Object {
          "margin": "1rem 1rem 1rem 1rem",
        }
      }
    >
      <p
        className="justify l-r-pad-text"
      >
         Add 
         to todays menu
      </p>
    </div>
    <div
      className="modal-order-content"
    >
      <button
        className="remove-modal"
        id="addMenu"
        onClick={[Function]}
      >
        Add
      </button>
      <button
        className="remove-modal"
        id="removeMenu"
        onClick={[Function]}
      >
        Cancel
      </button>
    </div>
  </div>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Set menu from the meal options
  </h4>
  <table>
    <tbody>
      <tr>
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Add to Menu
        </th>
      </tr>
      <tr
        className="tr"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="rice"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
      <tr
        className="tr"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="beans"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="pagination"
  >
    <div
      className="prev p-color"
    >
         
      <button
        onClick={[Function]}
      >
         
        <em
          className="fa fa-angle-left"
        />
         PREV 
      </button>
    </div>
    <div
      className="current p-color"
    >
      <button>
        1
         
      </button>
    </div>
    <div
      className="next p-color"
    >
      <button
        onClick={[Function]}
      >
        NEXT 
        <em
          className="fa fa-angle-right"
        />
      </button>
        
       
    </div>
  </div>
</div>
`;

exports[`Test Component of SETMENU component should should respond to lifeCycle Methods 2`] = `
<div
  className="order-wrapper order-container"
>
  <div
    className="modal-order modal"
  >
    <button
      className="remove-modal"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "red",
          "display": "block",
          "float": "right",
        }
      }
    >
      ×
    </button>
    <div
      className="modal-order-content"
      style={
        Object {
          "margin": "1rem 1rem 1rem 1rem",
        }
      }
    >
      <p
        className="justify l-r-pad-text"
      >
         Add 
         to todays menu
      </p>
    </div>
    <div
      className="modal-order-content"
    >
      <button
        className="remove-modal"
        id="addMenu"
        onClick={[Function]}
      >
        Add
      </button>
      <button
        className="remove-modal"
        id="removeMenu"
        onClick={[Function]}
      >
        Cancel
      </button>
    </div>
  </div>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Set menu from the meal options
  </h4>
  <table>
    <tbody>
      <tr>
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Add to Menu
        </th>
      </tr>
      <tr
        className="tr"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="rice"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
      <tr
        className="tr"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <button
            id="beans"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fa fa-list-alt y-color"
            />
             Add
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="pagination"
  >
    <div
      className="prev p-color"
    >
         
      <button
        onClick={[Function]}
      >
         
        <em
          className="fa fa-angle-left"
        />
         PREV 
      </button>
    </div>
    <div
      className="current p-color"
    >
      <button>
        1
         
      </button>
    </div>
    <div
      className="next p-color"
    >
      <button
        onClick={[Function]}
      >
        NEXT 
        <em
          className="fa fa-angle-right"
        />
      </button>
        
       
    </div>
  </div>
</div>
`;
